Fixed resize bug. Removed horizontal scroll.

--- a/theme.css
+++ b/theme.css
@@ -37,6 +37,7 @@ a.link:hover {
 body {
 	height: 100%;
 	width: 100%;
+	overflow-x: hidden;
 }
 
 #contentDiv {
